fix overflow issue on css

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ h1 {
 
 .projects {
 	margin-top: 3em;
+	overflow: auto;
 }
 
 .projects section {
@@ -52,7 +53,7 @@ footer {
 	color: white;
 	/*  the footer is glued to the bottom of the page despite scrolling*/
 	position: fixed;
-	/* whenever position was applied styling was lost with bootstrap, so 
+	/* whenever position was applied styling was lost with bootstrap, so
 	had to specify right and left: http://stackoverflow.com/questions/28144233/bootstrap-container-with-positionabsolute-loses-layout-inside*/
 	bottom: 0;
 	right: 0;
